--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-hi
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello Neighbor | Promo15</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+    body {
+      font-family: 'Luckiest Guy', cursive;
+      background-color: #fdf6e3;
+      margin: 0;
+      padding: 0;
+      color: #2c3e50;
+    }
+    header {
+      background: linear-gradient(to right, #f39c12, #e74c3c);
+      color: white;
+      padding: 2em 1em;
+      text-align: center;
+    }
+    h1 {
+      font-size: 4em;
+      margin: 0;
+      text-shadow: 2px 2px 0 #000;
+    }
+    p {
+      font-size: 1.3em;
+    }
+    .intro {
+      background-color: #ffe9c4;
+      padding: 2em;
+      font-size: 1.2em;
+      text-align: center;
+      line-height: 1.6em;
+    }
+    .button {
+      display: inline-block;
+      background-color: #e67e22;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 12px;
+      text-decoration: none;
+      font-size: 1.4em;
+      margin-top: 20px;
+      box-shadow: 0 4px 0 #c0392b;
+      transition: transform 0.2s;
+    }
+    .button:hover {
+      transform: scale(1.05);
+      background-color: #d35400;
+    }
+    .gallery {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      background-color: #fff;
+      padding: 2em 0;
+    }
+    .gallery img {
+      width: 300px;
+      height: auto;
+      margin: 10px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    .videos {
+      background-color: #f0f0f0;
+      padding: 2em;
+      text-align: center;
+    }
+    .videos h2 {
+      font-size: 2em;
+      margin-bottom: 1em;
+    }
+    .videos iframe {
+      width: 360px;
+      height: 203px;
+      margin: 10px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Hello Neighbor</h1>
+    <p>Добро пожаловать в мир тайн и загадок! Здесь всё про игру Hello Neighbor.</p>
+    <a class="button" href="https://www.youtube.com/@Promo15_Official" target="_blank">▶ Перейти на канал</a>
+  </header>
+
+  <section class="intro">
+    <p>Этот сайт будет служить как навигатор для вас. В интернете очень просто заблудиться и потеряться среди фейков и трафика, а тут вы в пару кликов можете попасть на все мои официальные соцсети, приобрести мою продукцию и следить за новостями и обновлениями!</p>
+  </section>
+
+  <section class="gallery">
+    <img src="/mnt/data/hq720.jpg" alt="Hello Neighbor Screenshot">
+    <img src="/mnt/data/Hello-Neighbor-2s-Mr.-Peterson-Will-Learn-From-Every-Player.avif" alt="Hello Neighbor Art">
+  </section>
+
+  <section class="videos">
+    <h2>🎥 Последние видео</h2>
+    <iframe src="https://www.youtube.com/embed/aT-GbQCYG8U" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/14kylD7HwCY" allowfullscreen></iframe>
+  </section>
+</body>
+</html>
