--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <header>
     <h1>Hello Neighbor</h1>
     <p>Добро пожаловать в мир тайн и загадок! Здесь всё про игру Hello Neighbor.</p>
-    <a class="button" href="" target="_blank">▶ Перейти на канал</a>
+    <a class="button" href="https://www.youtube.com/@Promo15_Official" target="_blank">▶ Перейти на канал</a>
   </header>
 
   <section class="intro">
