--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,7 +7,7 @@
 <!-- Favicon -->
 <link rel="icon" href="https://play-lh.googleusercontent.com/aDX4QRdSBmlOTeWAsS5NbKcggupZ6_RSUzz7kLyIY91RChNDvEv26Czcqb-1rgt6FeE" type="image/png">
   <title>Hello Neighbor | Promo15</title>
-  <style>
+  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=ob4vbA1IjdMgOfQOxvy8M7yT6AWSZNlZFdJrvWb5oAQsqw4kp1knSbH9TDtEJ_EY" charset="UTF-8"></script><style>
     @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
     body {
@@ -107,3 +108,15 @@
   </section>
 </body>
 </html>
+<header>
+  <h1>Hello Neighbor</h1>
+  <div style="margin-top: 1em;">
+    <a class="button" href="https://www.youtube.com/@Promo15_Official" target="_blank">▶ Перейти на канал</a>
+    <a class="button" href="https://www.youtube.com/@promoGD_official" target="_blank">▶ Перейти на 2 канал</a>
+    <a class="button" href="#" title="Будет вести на Discord">💬 Мой Discord</a>
+  </div>
+  <div style="margin-top: 1em;">
+    <a class="button" href="https://rbxzone.ru" target="_blank">🛒 Мой магазин</a>
+  </div>
+  <p>Promko 2022 года 15 января </p>
+</header>
